--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,12 @@
+
 *{
     margin: 0;
     padding: 0;
 }
 
 body { 
-    background-image:url('SinfulFormalFishingcat-max-1mb.gif'); 
-    background-repeat:repeat; 
+    background-image:url('s-l500.png'); 
+    border: solid black 15px; 
 } 
 
 
@@ -19,24 +20,26 @@ body {
     display: none;
 }
 
-
-
 .container{
     display: flex;
     text-align: center; 
+    justify-content: center;
     flex-direction: column;
     justify-content: space-between;
     min-height: 100vh;
     width: auto;
 }
 
+#divimg{
+    justify-content: space-between;
 
-
+}
 #img1{
     width:  400px;
     height: 400px;
     background-size: cover;
-    border: solid 25px green;  
+    border: solid 25px rgba(20, 20, 20, 0.254); 
+
 
 }
 
@@ -45,122 +48,18 @@ body {
     width:  400px;
     height: 400px;
     background-size: cover;
-    border: solid 25px green;
-
+    border: solid 25px rgba(14, 13, 13, 0.254);
+    
 }
 h1{
-    flex: 3 0px;
-    color: rgba(7, 192, 32, 0.466);
-    flex: space-between;
+
+    color: rgba(63, 64, 65, 0.358);
+    margin-top: 5%;
+    font-weight: bold;
 }
 
-
-
-
-/*
-.gone {
-    display: none;
+.imgofpulto{
+    background-size: cover;
+    border: solid 25px rgba(20, 20, 20, 0.254);
 }
 
-.gone2{
-    display: none;
-}
-
-/*{
-    text-align: center;
-}
-
-body{
-    background-image: url('walt-disney.gif');
-    /*display: flex;*/
-    /*align-items: column;*/
-    /*flex-direction: row;
-    justify-content: center;*/
-/*
-}
-*/
-
-/*
-.div{
-    background-color: blueviolet;
-    flex: 1;
-    display: flex;
-    justify-content: center ;
-    align-items: center;
-    flex-wrap: wrap;
-    height: 500px;
-    
-}
-*/
-/*
-.button1{
-    align-items: flex-end;
-}
-*/
-
-
-
-/* Touch only the bottom*/
-/******/
-/*
-#divimg{
-    height: 50vh;
-    width: auto;
-
-}
-*/
-/*
-#img1{
-    order: 1;
-    /*
-    border: 10px solid transparent;
-    padding: 15px;
-    border-image: url(maxresdefault.jpg)20px round;
-    height: 50vh ;
-    width: auto;*/
- /*   
-}
-*/
-/*
-#img2{
-    order: 1;
-    
-}
-*/
-
-/*
-#button1{
-    order: 2;
-    flex-direction: start;
-    flex: center;
-    width: 100px
-}
-
-#button2{
-    order: 2;
-    flex-direction: start;
-    flex: center;
-    width: 100px;
-    
-}
-
-#nextbttn{
-
-}
-
-.p2{
-
-}
-/*
-.div1{
-    display: flex;
-    /*flex-direction: column;*/
-    /*justify-content: column;
-    
-    height: 40px;
-    width: auto;*/
-   /*flex: center;
-   border: 20px solid rgba(14, 216, 102, 0.273);
-   align-items: center;
-   /*flex-direction: column-reverse;*//*
-}
